--- a/CmdWordBaseSeg/CmdWordBaseSeg.vcxproj.filters
+++ b/CmdWordBaseSeg/CmdWordBaseSeg.vcxproj.filters
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="源.cpp">
-      <Filter>资源文件</Filter>
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
